--- a/.github/workflows/deploy_to_coding.yml
+++ b/.github/workflows/deploy_to_coding.yml
@@ -34,8 +34,8 @@ jobs:
           rm -rf .git
           git clone https://${coding_username}:${coding_token}@${coding_ref} coding_dir
           cd coding_dir && mv .git ../ && cd ../ && rm -rf coding_dir
-          git config --local user.email "zfb132@gmail.com"
-          git config --local user.name "zfb"
+          git config --local user.email "2675699284@qq.com"
+          git config --local user.name "ZFX521"
           git config core.filemode false
           git remote set-url origin https://${coding_ref}
           git add .
