添加赞赏码

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ permalink: /blog/:year/:month/:day/:title/
 
 header-img: /img/default-bg.jpg
 WeChatPublic: /img/qrcode_WeChatPublic.jpg
+zfb_pay: /img/zfb_pay.jpg
+wx_pay: /img/wx_pay.jpg
 
 RSS: feed.xml
 categories_path: categories
