--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ sidebar-avatar: /img/me2.jpg
 #备案号
 bah: "豫ICP备2021032942号"
 
-# Friends
+# 友链
 friends: [
   {
     title: "GitHub下载加速",
@@ -66,5 +66,9 @@ friends: [
   {
     title: "常用API",
     href: "http://lkaa.top/"
+  },
+  {
+    title: "网盘",
+    href: "http://pan.zfx521.top"
   }
 ]
