--- a/_config.yml
+++ b/_config.yml
@@ -35,11 +35,13 @@ about_path: about
 
 BASE_PATH:
 
+qq: 2675699284
+gitee_username: ZFX521
 zhihu_username: 
 weibo_username:     
 facebook_username:
-github_username:    ZFX521
-google_username:    
+github_username: ZFX521
+google_username: ZFX1314521
 email: 2675699284@qq.com
 linkedin:
 
