--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ timezone: Asia/Shanghai
 paginate: 10
 paginate_path: "page:num"
 highlighter: rouge
-url: "https://www.zfx521.top"
+url: "https://www.zfxkj.top"
 baseurl: ""
 markdown: kramdown
 kramdown:
@@ -14,7 +14,7 @@ kramdown:
 gems: [jekyll-paginate, jekyll-sitemap, jekyll-feed]
 
 disqus: zfx521
-disqus_base: http://www.zfx251.top/
+disqus_base: http://www.zfxkj.top/
 
 # https://developers.google.com/analytics/devguides/collection/analyticsjs/
 google_analytics_id: UA-97824262-2
@@ -40,8 +40,8 @@ gitee_username: ZFX521
 zhihu_username: 
 weibo_username:     
 facebook_username:
-github_username: ZFX521
-google_username: ZFX1314521
+github_username: ZFXkj
+gmail: ZFX1314521@gmail.com
 email: 2675699284@qq.com
 linkedin:
 
