--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ BASE_PATH:
 
 qq: 2675699284
 gitee_username: ZFX521
-zhihu_username: 
+zhihu_username: ZFXKJ
 weibo_username:     
 facebook_username:
 github_username: ZFXkj
