--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
 
     - name: 上传到腾讯云COS并刷新CDN
       run: |
-        coscmd upload -rfs --delete ./public/ /
+        coscmd upload -rfs --delete ./ /
         tccli cdn PurgePathCache --cli-unfold-argument --Paths https://blog.zfxkj.top/ --FlushType flush
