--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,22 @@ jobs:
     steps:
     - name: 检出仓库代码
       uses: actions/checkout@master
+      
+    - name: 安装Node.js 11.x 
+      uses: actions/setup-node@master
+      with:
+        node-version: "11.x"
 
+    - name: 安装Hexo依赖
+      run: |
+        npm install hexo-cli -g
+        npm install
+
+    - name: 构建Hexo
+      run: |
+        hexo clean
+        hexo generate
+        
     - name: 安装腾讯云依赖
       run: |
         sudo pip install coscmd
