--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,20 +13,13 @@ jobs:
     - name: 检出仓库代码
       uses: actions/checkout@master
       
-    - name: 安装Node.js 11.x 
-      uses: actions/setup-node@master
+    - name: Setup Pages
+      uses: actions/configure-pages@v2
+    - name: Build with Jekyll
+      uses: actions/jekyll-build-pages@v1
       with:
-        node-version: "11.x"
-
-    - name: 安装Hexo依赖
-      run: |
-        npm install hexo-cli -g
-        npm install
-
-    - name: 构建Hexo
-      run: |
-        hexo clean
-        hexo generate
+        source: ./
+        destination: ./_site
         
     - name: 安装腾讯云依赖
       run: |
@@ -47,5 +40,5 @@ jobs:
 
     - name: 上传到腾讯云COS并刷新CDN
       run: |
-        coscmd upload -rfs --delete ./ / --ignore "./.git/*"
+        coscmd upload -rfs --delete ./_site / --ignore "./.git/*"
         tccli cdn PurgePathCache --cli-unfold-argument --Paths https://blog.zfxkj.top/ --FlushType flush
