--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,5 +40,6 @@ jobs:
 
     - name: 上传到腾讯云COS并刷新CDN
       run: |
-        coscmd upload -rfs --delete ./_site / --ignore "./.git/*"
+        cd _site
+        coscmd upload -rfs --delete ./ / --ignore "./.git/*"
         tccli cdn PurgePathCache --cli-unfold-argument --Paths https://blog.zfxkj.top/ --FlushType flush
