--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
       run: |
         cd _site
         coscmd upload -rfs --delete ./ / --ignore "./.git/*"
-        tccli cdn PurgePathCache --cli-unfold-argument --Paths https://blog.zfxkj.top/ --FlushType flush
+        tccli cdn PurgePathCache --cli-unfold-argument --Paths https://www.zfxkj.top/ --FlushType flush
