--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,6 @@ jobs:
     - name: 上传到腾讯云COS并刷新CDN
       run: |
         cd _site
-        coscmd upload -rfs --delete ./ / --ignore "./.git/*"
+        ls -lah
+        coscmd upload -rfs ./ / --ignore "./.git/*"
         tccli cdn PurgePathCache --cli-unfold-argument --Paths https://www.zfxkj.top/ --FlushType flush
